crates/vvv/src/output/human/snapshots/vvv__output__human__tests__move_symbol_preview.snap
---
source: crates/vvv/src/output/human/mod.rs
assertion_line: 792
expression: "render(|r| r.move_symbol(&fx::move_symbol()).unwrap())"
---
move Config from src/util.rs → src/config.rs

◆ cli::util::Config → cli::config::Config

→ 1   1 file
± 2   2 files
! 1

→ src/main.rs:3     crate::util::Config → crate::config::Config
! src/config.rs:1   crate::util::Config   now declared here, remove by hand

± src/util.rs
@@ -1,5 +1,3 @@
 use std::fmt;
 
-pub struct Config;
-
 fn other() {}

± src/config.rs
@@ -1 +1,3 @@
 use crate::util::{Config, Other};
+
+pub struct Config;
--- stderr ---
→ 1  ± 2  ! 1   3 files
hint: --apply to write · --diff for the full patch
