crates/vvv/src/output/human/snapshots/vvv__output__human__tests__outline_rows.snap
---
source: crates/vvv/src/output/human/mod.rs
expression: "render(|r| r.report(&Answer::Outline(fx::outline())).unwrap())"
---
src/plan/mod.rs

  24  enum ApplyError   pub
  26    Vfs             ·
  41  struct Plan       pub
  47  impl Plan
  49    new()           pub(crate)
  71  check()           ·
--- stderr ---
● 6   pub 2  pub(crate) 1  · 2
