crates/vvv/src/output/human/snapshots/vvv__output__human__tests__references_are_marked.snap
---
source: crates/vvv/src/output/human/mod.rs
expression: "render(|r| { r.report(&Answer::References(fx::references())).unwrap(); })"
---
● trait Language   src/lang/mod.rs:64:1

✓ 3  3 files
  1  src/lang/mod.rs
  1  src/lib.rs
  1  src/other.rs

? 1  1 file   ∅ unresolved
src/other.rs
  4     10:5    Language::new()

✗ 0
--- stderr ---
✓ 3  ? 1  ✗ 0   3 files
