crates/vvv/src/output/human/snapshots/vvv__output__human__tests__rename_diff_prints_the_patch.snap
---
source: crates/vvv/src/output/human/mod.rs
expression: "format!(\"{}--- stderr ---\\n{}\", String::from_utf8(out).unwrap(),\nString::from_utf8(err).unwrap())"
---
rename Language → Lang

● trait Language   src/lang/mod.rs:64:1

✓ 3  3 files
  1  src/lang/mod.rs
  1  src/lib.rs
  1  src/other.rs

? 1  1 file   ∅ unresolved   left out
src/other.rs
  4     10:5    Language::new()

✗ 0
src/lang/mod.rs
@@ -1 +1 @@
-pub trait Language: Send + Sync {
+pub trait Lang: Send + Sync {

src/lib.rs
@@ -1 +1 @@
-pub use lang::{Language, LanguageId};
+pub use lang::{Lang, LanguageId};
--- stderr ---
✓ 3  ? 1  ✗ 0   3 files   → 2 occurrences in 2 files
hint: --apply to write · --select 4 for the ? rows alone · -v to list the ✓ rows
