crates/vvv/src/output/human/snapshots/vvv__output__human__tests__rename_verbose_lists_every_row.snap
---
source: crates/vvv/src/output/human/mod.rs
expression: "format!(\"{}--- stderr ---\\n{}\", String::from_utf8(out).unwrap(),\nString::from_utf8(err).unwrap())"
---
rename Language → Lang

● trait Language   src/lang/mod.rs:64:1

✓ 3  3 files
● declaring module  1
src/lang/mod.rs
  1     64:11   pub trait Language: Send + Sync {
→ imported  1
src/lib.rs
  2 →   26:16   pub use lang::{Language, LanguageId};
↗ re-export  1
src/other.rs
  3     13:10   vvv::Language::default()

? 1  1 file   ∅ unresolved   left out
src/other.rs
  4     10:5    Language::new()

✗ 0
--- stderr ---
✓ 3  ? 1  ✗ 0   3 files   → 2 occurrences in 2 files
hint: --apply to write · --select 4 for the ? rows alone
