crates/vvv/src/output/human/snapshots/vvv__output__human__tests__retained_rewrite.snap
---
source: crates/vvv/src/output/human/mod.rs
expression: "render(|r|\nr.report(&Answer::PrepareRewrite(vvv_engine::PlanReviewReply::Complete(review))).unwrap())"
---
rewrite foo($$$A) → bar($$$A)

src/a.rs
@@ -1,3 +1,3 @@
 fn f() {
-    foo(1);
+    bar(1);
 }

src/b.rs
@@ -1 +1 @@
-foo(2);
+bar(2);
--- stderr ---
± 2   2 files
Plan: p1.example
