crates/vvv/src/output/human/snapshots/vvv__output__human__tests__rewrite_preview.snap
---
source: crates/vvv/src/output/human/mod.rs
assertion_line: 846
expression: "render(|r| r.rewrite(&fx::rewrite(false)).unwrap())"
---
rewrite foo($$$A) → bar($$$A)

src/a.rs
@@ -1,3 +1,3 @@
 fn f() {
-    foo(1);
+    bar(1);
 }

src/b.rs
@@ -1 +1 @@
-foo(2);
+bar(2);
--- stderr ---
± 2   2 files
hint: --apply to write
